# cpp-project-setup

./: CMakeLists.txt  README.md
src/: main.cpp
tests/: main.cpp
